--- a/1-python-temel.ipynb
+++ b/1-python-temel.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f8586fb8",
    "metadata": {},
    "outputs": [
@@ -32,18 +32,18 @@
        "[1, 'a', 'cat', 2, 3, 'dog', 4, 5]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def duz(liste):\n",
-    "    for oge in liste:\n",
-    "        if isinstance(oge, list):\n",
-    "            yield from duz(oge)\n",
+    "    for i in liste:\n",
+    "        if isinstance(i, list):\n",
+    "            yield from duz(i)\n",
     "        else:\n",
-    "            yield oge\n",
+    "            yield i\n",
     "\n",
     "\n",
     "liste = [[1, 'a', ['cat'], 2], [[[3]], 'dog'], 4, 5]\n",
